# Bot

./: .editorconfig  .gitignore  Cargo.toml  flake.nix  rust-toolchain.toml
src/: config.rs  main.rs  server.rs
src/commands/: execute.rs
