[package]
name = "Bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", features = ["utils"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "io-util", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
color-eyre = "0.6"
dashmap = "5.5.3"
log = "0.4"
pretty_env_logger = "0.5"
